# whywhywhy

./: LICENSE  package.json  pnpm-lock.yaml  vitest.config.ts
coding/: decision_log.md  implementation_plan.md  requirements.md  tech_doc.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/__tests__/: markdown.spec.ts  questionSelection.spec.ts
src/composables/: useClipboard.ts  useLLM.ts  useShortcut.ts  useWindow.ts
src/composables/__tests__/: useClipboard.spec.ts  useLLM.spec.ts  useWindow.spec.ts
src/stores/: appStore.ts
src/stores/__tests__/: appStore.spec.ts
